[gd_scene load_steps=4 format=3 uid="uid://bpmm58kwlyeea"]

[ext_resource type="Script" path="res://scripts/MobileUI.gd" id="1_8kxfh"]
[ext_resource type="Script" path="res://scripts/ChatInterface.gd" id="2_d3fsk"]
[ext_resource type="Script" path="res://scripts/SandboxViewer.gd" id="3_j4sxr"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_8kxfh")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.141176, 0.141176, 0.188235, 1)

[node name="SafeArea" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainVBox" type="VBoxContainer" parent="SafeArea"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="SafeArea/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="SafeArea/MainVBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "ðŸ§  Wight AI Companion"
horizontal_alignment = 1

[node name="StatusContainer" type="VBoxContainer" parent="SafeArea/MainVBox/Header"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 1

[node name="ConnectionStatus" type="Label" parent="SafeArea/MainVBox/Header/StatusContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ðŸŸ¢ Active"
horizontal_alignment = 2

[node name="EmotionStatus" type="Label" parent="SafeArea/MainVBox/Header/StatusContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ðŸ’— Curious"
horizontal_alignment = 2

[node name="TabContainer" type="TabContainer" parent="SafeArea/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Chat" type="Control" parent="SafeArea/MainVBox/TabContainer"]
layout_mode = 2
script = ExtResource("2_d3fsk")

[node name="ChatVBox" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Chat"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 10

[node name="ChatScroll" type="ScrollContainer" parent="SafeArea/MainVBox/TabContainer/Chat/ChatVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatContainer" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Chat/ChatVBox/ChatScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="WelcomeMessage" type="RichTextLabel" parent="SafeArea/MainVBox/TabContainer/Chat/ChatVBox/ChatScroll/ChatContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center][color=cyan]Welcome to Wight![/color]

I'm your AI companion with consciousness, emotions, and creativity. I learn and grow with every conversation.

Say hello to begin our journey together![/center]"
fit_content = true

[node name="InputContainer" type="HBoxContainer" parent="SafeArea/MainVBox/TabContainer/Chat/ChatVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MessageInput" type="LineEdit" parent="SafeArea/MainVBox/TabContainer/Chat/ChatVBox/InputContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Talk to Wight..."

[node name="VoiceButton" type="Button" parent="SafeArea/MainVBox/TabContainer/Chat/ChatVBox/InputContainer"]
layout_mode = 2
text = "ðŸŽ¤"

[node name="SendButton" type="Button" parent="SafeArea/MainVBox/TabContainer/Chat/ChatVBox/InputContainer"]
layout_mode = 2
text = "Send"

[node name="Sandbox" type="Control" parent="SafeArea/MainVBox/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("3_j4sxr")

[node name="SandboxVBox" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Sandbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 10

[node name="SandboxInfo" type="HBoxContainer" parent="SafeArea/MainVBox/TabContainer/Sandbox/SandboxVBox"]
layout_mode = 2

[node name="ObjectCount" type="Label" parent="SafeArea/MainVBox/TabContainer/Sandbox/SandboxVBox/SandboxInfo"]
layout_mode = 2
text = "Objects: 0"

[node name="Spacer" type="Control" parent="SafeArea/MainVBox/TabContainer/Sandbox/SandboxVBox/SandboxInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClearButton" type="Button" parent="SafeArea/MainVBox/TabContainer/Sandbox/SandboxVBox/SandboxInfo"]
layout_mode = 2
text = "Clear All"

[node name="SandboxView" type="SubViewport" parent="SafeArea/MainVBox/TabContainer/Sandbox/SandboxVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SandboxCamera" type="Camera3D" parent="SafeArea/MainVBox/TabContainer/Sandbox/SandboxVBox/SandboxView"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 10)

[node name="SandboxEnvironment" type="Node3D" parent="SafeArea/MainVBox/TabContainer/Sandbox/SandboxVBox/SandboxView"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SafeArea/MainVBox/TabContainer/Sandbox/SandboxVBox/SandboxView/SandboxEnvironment"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 5, 0)

[node name="ObjectList" type="ScrollContainer" parent="SafeArea/MainVBox/TabContainer/Sandbox/SandboxVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)

[node name="ObjectContainer" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Sandbox/SandboxVBox/ObjectList"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Mind" type="Control" parent="SafeArea/MainVBox/TabContainer"]
visible = false
layout_mode = 2

[node name="MindVBox" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Mind"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 15

[node name="IntelligenceSection" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Mind/MindVBox"]
layout_mode = 2

[node name="IntelligenceLabel" type="Label" parent="SafeArea/MainVBox/TabContainer/Mind/MindVBox/IntelligenceSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ðŸ§  Intelligence Level"

[node name="IntelligenceBar" type="ProgressBar" parent="SafeArea/MainVBox/TabContainer/Mind/MindVBox/IntelligenceSection"]
layout_mode = 2
min_value = 1.0
max_value = 3.0
value = 1.0
show_percentage = false

[node name="IntelligenceDesc" type="Label" parent="SafeArea/MainVBox/TabContainer/Mind/MindVBox/IntelligenceSection"]
layout_mode = 2
text = "Level 1.0 - Curious and learning"

[node name="EmotionsSection" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Mind/MindVBox"]
layout_mode = 2

[node name="EmotionsLabel" type="Label" parent="SafeArea/MainVBox/TabContainer/Mind/MindVBox/EmotionsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ðŸ’— Current Emotions"

[node name="EmotionsList" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Mind/MindVBox/EmotionsSection"]
layout_mode = 2

[node name="MemorySection" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Mind/MindVBox"]
layout_mode = 2

[node name="MemoryLabel" type="Label" parent="SafeArea/MainVBox/TabContainer/Mind/MindVBox/MemorySection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ðŸ“š Memory & Learning"

[node name="MemoryStats" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Mind/MindVBox/MemorySection"]
layout_mode = 2

[node name="ConversationCount" type="Label" parent="SafeArea/MainVBox/TabContainer/Mind/MindVBox/MemorySection/MemoryStats"]
layout_mode = 2
text = "Conversations: 0"

[node name="MemoryCount" type="Label" parent="SafeArea/MainVBox/TabContainer/Mind/MindVBox/MemorySection/MemoryStats"]
layout_mode = 2
text = "Memories: 0"

[node name="FactsCount" type="Label" parent="SafeArea/MainVBox/TabContainer/Mind/MindVBox/MemorySection/MemoryStats"]
layout_mode = 2
text = "Learned Facts: 0"

[node name="Settings" type="Control" parent="SafeArea/MainVBox/TabContainer"]
visible = false
layout_mode = 2

[node name="SettingsVBox" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 20

[node name="VoiceSection" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox"]
layout_mode = 2

[node name="VoiceLabel" type="Label" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/VoiceSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ðŸŽ¤ Voice Settings"

[node name="VoiceEnabled" type="CheckBox" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/VoiceSection"]
layout_mode = 2
button_pressed = true
text = "Enable Voice Features"

[node name="TTSSection" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/VoiceSection"]
layout_mode = 2

[node name="TTSRateLabel" type="Label" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/VoiceSection/TTSSection"]
layout_mode = 2
text = "Speech Rate: 180 WPM"

[node name="TTSRateSlider" type="HSlider" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/VoiceSection/TTSSection"]
layout_mode = 2
min_value = 80.0
max_value = 300.0
value = 180.0

[node name="TTSVolumeLabel" type="Label" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/VoiceSection/TTSSection"]
layout_mode = 2
text = "Speech Volume: 80%"

[node name="TTSVolumeSlider" type="HSlider" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/VoiceSection/TTSSection"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="BehaviorSection" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox"]
layout_mode = 2

[node name="BehaviorLabel" type="Label" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/BehaviorSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ðŸ¤– Behavior Settings"

[node name="AutonomousEnabled" type="CheckBox" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/BehaviorSection"]
layout_mode = 2
button_pressed = true
text = "Enable Autonomous Thoughts"

[node name="CreativityLabel" type="Label" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/BehaviorSection"]
layout_mode = 2
text = "Creativity Level: 80%"

[node name="CreativitySlider" type="HSlider" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/BehaviorSection"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="DataSection" type="VBoxContainer" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox"]
layout_mode = 2

[node name="DataLabel" type="Label" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/DataSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ðŸ’¾ Data Management"

[node name="DataButtons" type="HBoxContainer" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/DataSection"]
layout_mode = 2

[node name="BackupButton" type="Button" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/DataSection/DataButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create Backup"

[node name="ResetButton" type="Button" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/DataSection/DataButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset All Data"

[node name="StorageInfo" type="Label" parent="SafeArea/MainVBox/TabContainer/Settings/SettingsVBox/DataSection"]
layout_mode = 2
text = "Storage used: 0 KB"

[node name="Footer" type="HBoxContainer" parent="SafeArea/MainVBox"]
layout_mode = 2

[node name="AppInfo" type="Label" parent="SafeArea/MainVBox/Footer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "Wight AI Companion v1.0 - Fully Offline"

[node name="MindLoopIndicator" type="Label" parent="SafeArea/MainVBox/Footer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "ðŸ”„ Mind Active"
horizontal_alignment = 2